--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
     <title>Сарафан Доставка 1</title>
-    <script type="application/javascript" src="docs/skiko.js"></script>
-    <link rel="icon" type="image/x-icon" href="docs/favicon.webp">
+    <script type="application/javascript" src="../Web_Delivery_test/skiko.js"></script>
+    <link rel="icon" type="image/x-icon" href="../Web_Delivery_test/favicon.webp">
     <style>
         html, canvas {
           width: 100%;
@@ -20,6 +20,6 @@
 </head>
 <body>
 <canvas id="canvasBody"></canvas>
-<script type="application/javascript" src="docs/sarawanDeliveryJs.js"></script>
+<script type="application/javascript" src="../Web_Delivery_test/sarawanDeliveryJs.js"></script>
 </body>
 </html>
