fix path for js files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
-    <title>Сарафан Доставка 1</title>
-    <script type="application/javascript" src="../web-delivery/skiko.js"></script>
+    <title>Сарафан Доставка, Курьерское приложение</title>
+    <script type="application/javascript" src="../skiko.js"></script>
     <link rel="icon" type="image/x-icon" href="../web-delivery/favicon.webp">
     <style>
         html, canvas {
@@ -20,6 +20,6 @@
 </head>
 <body>
 <canvas id="canvasBody"></canvas>
-<script type="application/javascript" src="../web-delivery/sarawanDeliveryJs.js"></script>
+<script type="application/javascript" src="../sarawanDeliveryJs.js"></script>
 </body>
 </html>
