--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/web-delivery/">
+    <base href="../web-delivery/">
     <title>Сарафан Доставка, Курьерское приложение </title>
-    <script type="application/javascript" src="../skiko.js"></script>
-    <link rel="icon" type="image/x-icon" href="../favicon.webp">
+    <script type="application/javascript" src="skiko.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.webp">
     <style>
         html, canvas {
           width: 100%;
@@ -20,6 +20,6 @@
 </head>
 <body>
 <canvas id="canvasBody"></canvas>
-<script type="application/javascript" src="../sarawanDeliveryJs.js"></script>
+<script type="application/javascript" src="sarawanDeliveryJs.js"></script>
 </body>
 </html>
